[tool.poetry]
name = "ca-imaging-burst"
version = "0.1.0"
description = "Burst detection for calcium-imaging video."
authors = ["SproutTurtle <minjaek3@illinois.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,<3.12"
numpy = "^1.26.3"
opencv-python = "^4.9.0.80"
MiV-OS = "^0.3.0.post12"
matplotlib = "^3.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
